# mad-onis

./: README.md  config.toml  pyproject.toml
src/: browser.py  config.py  db.py  download.py  extract.py  logging_setup.py  main.py
